# ai-tax-assistant

./: .gitignore  Makefile  README.md  code_review_report.md  docker-compose.yml
.github/workflows/: weekly-snapshot.yml
backend/: .env.example  api.py  embed.py  evaluate.py  llm.py  pyproject.toml  rag.py
backend/etl/: discover.py  fetch.py  ingest.py  parse.py  test_strip.py  update.py
backend/scratch/: assess_manuals.py
backend/src/: api.py  embed.py  evaluate.py  llm.py  qdrant_store.py  rag.py  snapshot.py
backend/src/etl/: backfill_metadata.py  discover.py  discover_mainstream.py  fetch.py  fetch_mainstream.py  ingest.py  parse.py  parse_mainstream.py  update.py
backend/tests/: test_api.py  test_embed_logic.py  test_etl_logic.py  test_evaluate.py  test_llm_logic.py  test_parse_logic.py  test_qdrant_store.py  test_query.py  test_rag_logic.py  test_snapshot.py  test_suggestions.py
frontend/: jest.config.js  package-lock.json  package.json
frontend/src/__tests__/: citations.test.ts
frontend/src/app/: citations.ts  globals.css  layout.tsx  page.tsx
scratch/: test_citations.js
